deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: index.docker.io/sorted78/vmware-demo:latest
        name: demo
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
