ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.rain-test.com
    http:
      paths:
      - backend:
          serviceName: demo
          servicePort: 80
        path: /
